--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
+    "sweetalert2": "^9.17.1",
     "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-carousel": "^0.18.0",
+    "vue-loading-overlay": "^3.3.2",
+    "vue-recaptcha-v3": "^1.9.0",
     "vue-responsive-video-background-player": "^1.1.0",
     "vue-router": "^3.1.6",
-    "vuetify": "^2.2.11"
+    "vue-sweetalert2": "^3.0.6",
+    "vuetify": "^2.2.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
