--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/vue-fontawesome": "^0.1.10",
+    "awesome-notifications": "^3.1.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
     "sweetalert2": "^9.17.1",
     "swiper": "^5.4.5",
     "vue": "^2.6.11",
+    "vue-awesome-notifications": "^3.1.1",
     "vue-awesome-swiper": "^4.1.1",
     "vue-carousel": "^0.18.0",
     "vue-loading-overlay": "^3.3.2",
+    "vue-notification": "^1.3.20",
     "vue-recaptcha-v3": "^1.9.0",
     "vue-responsive-video-background-player": "^1.1.0",
     "vue-router": "^3.1.6",
