--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-responsive-video-background-player": "^1.1.0",
     "vue-router": "^3.1.6",
     "vue-sweetalert2": "^3.0.6",
+    "vue-tel-input-vuetify": "^1.2.13",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1"
   },
